# semantic-proprioception-demo

./: DATASETS.md  README.md  STREAMLIT_DEPLOY.md  fetch_arxiv_data.py  fetch_hackernews_data.py  precompute_arxiv_embeddings.py  precompute_embeddings.py  precompute_hackernews_embeddings.py  requirements.txt  semantic_proprioception_demo.py  streamlit_app.py  umap_3d_data_MPNet-base.parquet  umap_3d_data_MiniLM-L12.parquet  umap_3d_data_MiniLM-L3.parquet  umap_3d_data_MiniLM-L6.parquet
arxiv_demo_data/: MPNet-base_embeddings.parquet  MPNet-base_lsh_index.parquet  MiniLM-L12_embeddings.parquet  MiniLM-L12_lsh_index.parquet  MiniLM-L3_embeddings.parquet  MiniLM-L3_lsh_index.parquet  MiniLM-L6_embeddings.parquet  MiniLM-L6_lsh_index.parquet  models_metadata.parquet
hackernews_demo_data/: MPNet-base_embeddings.parquet  MPNet-base_lsh_index.parquet  MiniLM-L12_embeddings.parquet  MiniLM-L12_lsh_index.parquet  MiniLM-L3_embeddings.parquet  MiniLM-L3_lsh_index.parquet  MiniLM-L6_embeddings.parquet  MiniLM-L6_lsh_index.parquet  models_metadata.parquet
krapivin-python/: Cargo.toml  bootstrapped_lsh.py  lsh_parquet.py
krapivin-python/src/: lib.rs  lsh_bindings.rs
paper/: NOTES_bit_slicing_findings.md  NOTES_learned_hyperplanes.md  NOTES_multiprobe_lsh.md  all-MiniLM-L6-v2_wikipedia_hyperplanes.json  all-MiniLM-L6-v2_wikipedia_hyperplanes.npy  benchmark_krapivin.py  compute_wikipedia_hyperplanes.py  density_aware_search.py  generate_architecture_diagram.py  generate_figures.py  hierarchical_lsh_results.csv  inspect_bucket_coherence.py  references.bib  test_10k_seeds.py  (+24 more)
(+12 files in other folders)
