[package]
name = "krapivin-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "krapivin_hash_rs"
crate-type = ["cdylib"]

[dependencies]
krapivin-core = { path = "../krapivin-core" }
krapivin-lsh = { path = "../krapivin-lsh" }
pyo3 = { version = "0.23", features = ["extension-module"] }
xxhash-rust = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
indexmap = "2.0"
